--- a/notebooks/Reuters_MLP.ipynb
+++ b/notebooks/Reuters_MLP.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -183,9 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -194,36 +195,36 @@
      "text": [
       "Train on 8083 samples, validate on 899 samples\n",
       "Epoch 1/15\n",
-      "8083/8083 [==============================] - 2s - loss: 1.5401 - acc: 0.6443 - val_loss: 1.2057 - val_acc: 0.7419\n",
+      "8083/8083 [==============================] - 1s - loss: 1.4274 - acc: 0.6812 - val_loss: 1.0934 - val_acc: 0.7553\n",
       "Epoch 2/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.9978 - acc: 0.7630 - val_loss: 1.0194 - val_acc: 0.7786\n",
+      "8083/8083 [==============================] - 1s - loss: 0.7737 - acc: 0.8169 - val_loss: 0.9172 - val_acc: 0.7920\n",
       "Epoch 3/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.7596 - acc: 0.8122 - val_loss: 0.9633 - val_acc: 0.7831\n",
+      "8083/8083 [==============================] - 1s - loss: 0.5441 - acc: 0.8691 - val_loss: 0.8529 - val_acc: 0.8087\n",
       "Epoch 4/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.5890 - acc: 0.8513 - val_loss: 0.9273 - val_acc: 0.7964\n",
+      "8083/8083 [==============================] - 1s - loss: 0.4132 - acc: 0.8968 - val_loss: 0.8730 - val_acc: 0.8076\n",
       "Epoch 5/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.4794 - acc: 0.8724 - val_loss: 0.9400 - val_acc: 0.7953\n",
+      "8083/8083 [==============================] - 1s - loss: 0.3338 - acc: 0.9180 - val_loss: 0.8931 - val_acc: 0.8176\n",
       "Epoch 6/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.4082 - acc: 0.8916 - val_loss: 1.0143 - val_acc: 0.8076\n",
+      "8083/8083 [==============================] - 1s - loss: 0.2751 - acc: 0.9287 - val_loss: 0.9250 - val_acc: 0.8176\n",
       "Epoch 7/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.3388 - acc: 0.9135 - val_loss: 0.9941 - val_acc: 0.8076\n",
+      "8083/8083 [==============================] - 1s - loss: 0.2381 - acc: 0.9380 - val_loss: 0.9519 - val_acc: 0.8109\n",
       "Epoch 8/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.3017 - acc: 0.9203 - val_loss: 1.0931 - val_acc: 0.7887\n",
+      "8083/8083 [==============================] - 1s - loss: 0.2198 - acc: 0.9440 - val_loss: 0.9600 - val_acc: 0.8098\n",
       "Epoch 9/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.2661 - acc: 0.9295 - val_loss: 1.0658 - val_acc: 0.7987\n",
+      "8083/8083 [==============================] - 1s - loss: 0.2000 - acc: 0.9478 - val_loss: 1.0384 - val_acc: 0.7964\n",
       "Epoch 10/15\n",
-      "8083/8083 [==============================] - 2s - loss: 0.2645 - acc: 0.9308 - val_loss: 1.0550 - val_acc: 0.7887\n",
+      "8083/8083 [==============================] - 1s - loss: 0.1850 - acc: 0.9490 - val_loss: 1.0403 - val_acc: 0.7864\n",
       "Epoch 11/15\n",
-      "8083/8083 [==============================] - 3s - loss: 0.2450 - acc: 0.9363 - val_loss: 1.0642 - val_acc: 0.7976\n",
+      "8083/8083 [==============================] - 1s - loss: 0.1829 - acc: 0.9522 - val_loss: 1.0429 - val_acc: 0.7898\n",
       "Epoch 12/15\n",
-      "8083/8083 [==============================] - 3s - loss: 0.2197 - acc: 0.9433 - val_loss: 1.1257 - val_acc: 0.7976\n",
+      "8083/8083 [==============================] - 2s - loss: 0.1706 - acc: 0.9536 - val_loss: 1.1037 - val_acc: 0.7898\n",
       "Epoch 13/15\n",
-      "8083/8083 [==============================] - 3s - loss: 0.2322 - acc: 0.9400 - val_loss: 1.1181 - val_acc: 0.8009\n",
+      "8083/8083 [==============================] - 2s - loss: 0.1684 - acc: 0.9545 - val_loss: 1.0831 - val_acc: 0.7931\n",
       "Epoch 14/15\n",
-      "8083/8083 [==============================] - 3s - loss: 0.1915 - acc: 0.9467 - val_loss: 1.2379 - val_acc: 0.7842\n",
+      "8083/8083 [==============================] - 2s - loss: 0.1581 - acc: 0.9553 - val_loss: 1.1036 - val_acc: 0.7887\n",
       "Epoch 15/15\n",
-      "8083/8083 [==============================] - 3s - loss: 0.1968 - acc: 0.9433 - val_loss: 1.2261 - val_acc: 0.7887\n",
-      "Model training took 0.74 minutes\n"
+      "8083/8083 [==============================] - 2s - loss: 0.1562 - acc: 0.9535 - val_loss: 1.1101 - val_acc: 0.7998\n",
+      "Model training took 0.48 minutes\n"
      ]
     }
    ],
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -248,9 +249,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2112/2246 [===========================>..] - ETA: 0s\n",
-      "Test score: 1.1750655809\n",
-      "Test accuracy: 0.792965271594\n"
+      "2016/2246 [=========================>....] - ETA: 0s\n",
+      "Test score: 1.08631595775\n",
+      "Test accuracy: 0.786286731968\n"
      ]
     }
    ],
@@ -259,6 +260,60 @@
     "                       batch_size=batch_size, verbose=1)\n",
     "print('\\nTest score:', score[0])\n",
     "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Save fitted model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import output_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "output_model.save_model(model, 'Reuters_MLP_model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'output_model' from '/Users/kgullikson/Analysis/Testing/Neural_Networks/notebooks/output_model/__init__.py'>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from importlib import reload\n",
+    "reload(output_model)"
    ]
   },
   {
