Moved models to their own directory

--- a/notebooks/MNIST_cnn.ipynb
+++ b/notebooks/MNIST_cnn.ipynb
@@ -364,7 +364,7 @@
    ],
    "source": [
     "import output_model\n",
-    "output_model.save_model(model, 'MNIST_cnn_model')"
+    "output_model.save_model(model, 'models/MNIST_cnn_model')"
    ]
   },
   {
