--- a/notebooks/Reuters_MLP.ipynb
+++ b/notebooks/Reuters_MLP.ipynb
@@ -290,7 +290,7 @@
    },
    "outputs": [],
    "source": [
-    "output_model.save_model(model, 'Reuters_MLP_model')"
+    "output_model.save_model(model, 'models/Reuters_MLP_model')"
    ]
   },
   {
